assets: prevent the feedback tooltip icon from being squashed by text

--- a/assets/src/components/base/FeedbackButton/FeedbackButton.css
+++ b/assets/src/components/base/FeedbackButton/FeedbackButton.css
@@ -70,6 +70,7 @@
 	top: 2px;
 	font-size: 16px;
 	padding-bottom: 5px;
+	min-width: 16px;
 }
 
 .feedback-button__tooltip-content .feedback-button__tooltip-icon-error {
